# pykli

./: .editorconfig  .gitignore  .releaserc.yaml  LICENSE  README.md  cspell.json  justfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yaml  release.yaml
pykli/: __init__.py  __main__.py  cli.py  completer.py  keybindgings.py  ksqldb.py  printer.py  repl_eval.py  repl_print.py  repl_read.py  tokens.py
src/cli/: __init__.py  __main__.py  cli.py
src/ksqldb/: __init__.py  api.py  client.py
tests/: conftest.py  docker-compose.yaml  e2e.ksql  test_e2e.py  test_ksqldb.py  test_printer.py  test_pykli.py  test_repl_eval.py  test_repl_print.py  test_repl_read.py  test_tokens.py
