[tool.poetry]
name = "pykli"
version = "0.0.1"
description = "ksqlDB command line client"
authors = ["Ievgenii Shepeliuk <eshepelyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "pykli"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
prompt-toolkit = "^3.0.38"
pygments = "^2.15.1"
xdg-base-dirs = "^6.0.0"
httpx = {extras = ["http2"], version = "^0.24.1"}
cli_helpers = {extras = ["styles"], version = "^2.3.0"}
sqlparse = "^0.4.4"

[tool.poetry.scripts]
pykli = "pykli.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140

[tool.pytest.ini_options]
markers = [
    "e2e: e2e tests",
]
