[tool.poetry]
name = "pyKLI"
version = "0"
description = "Interactive ksqlDB command line client with autocompletion and syntax highlighting"
license = "MIT"
authors = ["Ievgenii Shepeliuk <eshepelyuk@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/eshepelyuk/pykli"
repository = "https://github.com/eshepelyuk/pykli"
keywords = ["cli", "kafka", "tui", "confluent", "ksql", "ksqldb"]
packages = [{include = "pykli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
prompt-toolkit = "^3.0.38"
pygments = "^2.15.1"
xdg-base-dirs = "^6.0.0"
httpx = {extras = ["http2"], version = "^0.24.1"}
cli_helpers = {extras = ["styles"], version = "^2.3.0"}
sqlparse = "^0.4.4"

[tool.poetry.scripts]
pykli = "pykli.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.11.1"
exceptiongroup = {version = "^1", python = "<3.11"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "e2e: e2e tests",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
metadata = false
